--- a/TODO
+++ b/TODO
@@ -9,11 +9,11 @@
 	* rfc2ftn: mime_deheader() für alle RFC-Header ->
 	  Fido-Something
 
-	* get rid of the fidogate_exit(), exit.c stuff. Is/will this
+DONE	* get rid of the fidogate_exit(), exit.c stuff. Is/will this
 	  be used anyway???
 
-	* ffx/ffxqt: remove compression/decompression (handled by
-	  ftnpack).
+DONE	* ffx/ffxqt: remove compression/decompression (handled by
+ffx	  ftnpack).
 
 
         * ftn2rfc: if charset_set_in_out() fails, try to use a
