--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-11-26  Martin Junius  <mj@fido.de>
+
+	======= Release 4.4.2 ================================================
+	------- CVS tag R442 -------------------------------------------------
+	------- CVS ci -------------------------------------------------------
+
+	* fidogate.spec: updated.
+
 2000-11-25  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
