--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-06-03  Martin Junius  <mj@m-j-s.net>
+
+	======= Release 4.4.4 ================================================
+	------- CVS tag R444 -------------------------------------------------
+	------- CVS ci -------------------------------------------------------
+
+	* fidogate.spec: added "noreplace" to %config.
+
 2001-05-28  Martin Junius  <mj@m-j-s.net>
 
 	------- CVS ci -------------------------------------------------------
