--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2001-08-20  Martin Junius  <mj@m-j-s.net>
+
+	------- CVS ci -------------------------------------------------------
+
+	* config.make (SENDMAIL_CF_DIR): changed to /usr/share/sendmail-cf
+	  for RedHat 7.1.
+
+	* sendmail/cf/redhat7-orodruin.mc: new config file for RedHat 7.1,
+	  based on original redhat.mc from sendmail-cf-8.11.2-14.
+
 2001-07-28  Martin Junius  <mj@m-j-s.net>
 
 	------- CVS ci -------------------------------------------------------
