--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2001-10-21  Martin Junius  <mj@m-j-s.net>
+
+	------- CVS ci -------------------------------------------------------
+
+	* version.h (PATCHLEVEL): set to 5, version 4.4.5
+
+	* sendmail/cf/redhat6-morannon.mc: modified m4 config file for
+	  sendmail 8.11.6, using feature dnsbl.
+
+	* scripts/maintenance/logsendmail.pl: allow [a-z] in sendmail ID,
+	  sendmail 8.11.6 used longer IDs with mixed case than previous
+	  versions. 
+
+	* scripts/maintenance/logcheck.pl: changed ORxx regex to match for
+	  sendmail 8.11.6 logs.
+
 2001-08-20  Martin Junius  <mj@m-j-s.net>
 
 	------- CVS ci -------------------------------------------------------
