--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-07-10  Martin Junius  <mj@m-j-s.net>
+
+	------- CVS ci -------------------------------------------------------
+
+	* TODO: copied latest version from old source working dir.
+
+2002-07-09  Martin Junius  <mj@m-j-s.net>
+
+	* ====================================================================
+	* =      FIDOGATE CVS lives now at cvs.fidogate.sourceforge.net      =
+	* ====================================================================
+	
 2001-12-27  Martin Junius  <mj@m-j-s.net>
 
 	======= Release 4.4.5 ================================================
