--- a/doc/fidogate.texi
+++ b/doc/fidogate.texi
@@ -2,7 +2,7 @@
 @c
 @c FIDOGATE documentation for 4.4
 @c
-@c $Id: fidogate.texi,v 4.51 2002/07/15 20:21:55 n0ll Exp $
+@c $Id: fidogate.texi,v 4.52 2002/07/21 18:26:11 n0ll Exp $
 @c
 
 @setfilename fidogate.info
@@ -3486,6 +3486,13 @@ of regular expressions.
 Line length for formatting long paragraphs (no explicit line break) from 
 Fido messages. This replaces the old @code{MAX_LINELEN} from
 @code{config.h}. The default value is 72.
+
+
+@item DontIgnore0x8d
+@item DontIgnoreSoftCR
+Normally, soft CR characters (hex 0x8d) in FTN messages are
+ignored. When this option is turned on, they are treated as normal
+characters. Useful e.g. for the cyrillic cp866 charset.
 
 
 @end table
