--- a/doc/fidogate.texi
+++ b/doc/fidogate.texi
@@ -2,7 +2,7 @@
 @c
 @c FIDOGATE documentation for 4.4
 @c
-@c $Id: fidogate.texi,v 4.52 2002/07/21 18:26:11 n0ll Exp $
+@c $Id: fidogate.texi,v 4.53 2002/07/28 08:24:28 n0ll Exp $
 @c
 
 @setfilename fidogate.info
@@ -1921,6 +1921,9 @@ ftnhatch  @r{[}@i{-options}@r{]}  @i{area}  @i{file}  "@i{description}"
 
 @item -b --fareas-bbs @i{NAME}
 Use alternate FAREAS.BBS.
+
+@item -r --replaces @i{FILE}
+Adds @code{Replaces }@i{FILE} header to generated tic file.
 
 @end table
 
