--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-11  Martin Junius  <mj@m-j-s.net>
+
+	======= Release 4.4.7 ================================================
+	------- CVS tag R447 -------------------------------------------------
+	------- CVS ci -------------------------------------------------------
+
+	* ANNOUNCE: updated.
+
 2003-04-10  Martin Junius  <mj@m-j-s.net>
 
 	------- CVS ci -------------------------------------------------------
