--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2004-08-22  Martin Junius  <mj.at.n0ll.dot.net>
 
+	------- CVS ci -------------------------------------------------------
+
+	* ...: updated copyright and email address, anti-spam measure.
+
+	------- CVS ci -------------------------------------------------------
+
+	* src/gate/ftn2rfc.c (unpack): if * Origin is empty, don't use it
+	  for the Organization header, use default from config.
+
+	------- CVS ci -------------------------------------------------------
+
 	* test/Makefile (test verify): test target is now the same as verify.
 
 	* version.h (PATCHLEVEL): set to 10, version 4.4.10.
