--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-01-08  Martin Junius  <mj.at.n0ll.dot.net>
 
+	======= Branch 4.4 starts here =======================================
+
 	* : created branch for future bug fix releases of FIDOGATE 4.4
 
 	------- CVS tag -b BRANCH_44 -----------------------------------------
